Added local image for header
image has been added to website root path, and referenced accordingly

--- a/EchoTable/Views/Home/Index.cshtml
+++ b/EchoTable/Views/Home/Index.cshtml
@@ -18,9 +18,10 @@
             <tr>
                 <td>
                     <h2>@Html.DisplayFor(modelItem => item.Header)</h2>
-                    @if (item.imgAdress != null) {
+                    @if (item.imgAdress != null)
+                    {
                         <br>
-                        <img src="@Html.DisplayFor(modelItem => item.imgAdress)" class="responsive"/>
+                        <img src="@Html.DisplayFor(modelItem => item.imgAdress)" class="responsive" />
                         <br>
                     }
                     <br>
