--- a/EchoTable/Views/Shared/_Layout.cshtml
+++ b/EchoTable/Views/Shared/_Layout.cshtml
@@ -11,7 +11,7 @@
     <header>
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
             <div class="container">
-                <img src="https://lh3.googleusercontent.com/ja6FIWi22B6Qsp3HB-6BuwDSyrACoT-zFMQPbSJwhZb_wpWmOXb2BL_etTVggtA82x_wNFjlWPkfAm4dzUKChGQ4RIPxTAjzSs1tlnPo3XADu3MQicmyv8pWqrj5ij2tEUaEBTqRS9mwF7QMy8g9vj5WYg95ioN0yiq4QxdK3A37iQTT8MZHtPj-WPs9V-pcc4mj0ulNEKsDbQyF-fnU0jJ5Xp7pjlC7YSx14pkH-w8DKJVSXAR0JE--TJBpHn3IbBSBKqnY8GFungeB3kXC7wvN6WI9tMJ0W8zuThsJTcZTGbpaOimA4fJfhqaHud_c42XuuKNTm-agy_fnDPzJkHi9Xtce0lZX82Zmt61Di5lNUzQlndGXq-cikgRqomeIMjNRlBx9aIrJnXijLNRvuLWag1HOqaTw5RY9hVW8yi58LSqwZAUv27xGsbyxP_4e_FpWPcmpLVo-F9FjxKu0wBhQbVkxl575PiMn_uLpx_b9Y0hFVxJoGVjr_ZgOAVE79TnEb-u-lEPOxosRTHorXEq4q_1al9V8__NPdKmIlgVC55J6J5pBjYWAfQgOFBMrKxGRJY9jLeqmV5gD61MBy3nm0vn2g-kZi3eE2hnk_RB1kaY7juCMBdNKLrC8f_-J89WhBuO6ZpcjNBCm_yoAHMChT1qjjXi2yqnXzIxOf9WLIUOwUK27GaxvS86RBg=w727-h677-no?authuser=0" class="navbar-brand" style="width:100px;">
+                <img src="~/EchoImage.png" class="navbar-brand" style="width:100px;">
                 <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">Echotable</a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
