Update of Contact layout
<h2> and <p>

--- a/EchoTable/Views/Information/Contact.cshtml
+++ b/EchoTable/Views/Information/Contact.cshtml
@@ -4,4 +4,5 @@
 }
 
 <h1>Contact</h1>
-<h2> </h2>
+<h2> Telefon/mail </h2>
+<p>Hvis du har nogen spørgsmål, så skriv til vores mail eller ring på vores telefon nummer</p>
