--- a/EchoTable/Views/Information/Contact.cshtml
+++ b/EchoTable/Views/Information/Contact.cshtml
@@ -5,4 +5,4 @@
 
 <h1>Contact</h1>
 <h2> Telefon/mail </h2>
-<p>Hvis du har nogen spørgsmål, så skriv til vores mail eller ring på vores telefon nummer</p>
+<p>Telefon: 23245262 <br /> E-mail:EchoTable@gmail.com</p>
