--- a/EchoTable/Views/Information/Contact.cshtml
+++ b/EchoTable/Views/Information/Contact.cshtml
@@ -3,6 +3,5 @@
     ViewData["Title"] = "Contact";
 }
 
-<h1>Contact</h1>
-<h2> Telefon/mail </h2>
-<p>Telefon: 23245262 <br /> E-mail:EchoTable@gmail.com</p>
+<h1>Kontaktoplysninger</h1>
+<p>Telefon: +45 50 70 30 90 <br /> E-mail:EchoTableSupport@gmail.com</p>
